# plugin-elizaos-compchembridge

./: .eslintrc.js  .gitignore  .npmrc  DEPLOYMENT_NOTES.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  PLUGIN.md  README.md  SIMPLE_KNOWLEDGE_GRAPH.md  bun.lockb  jest.config.js  package.json  package_old.json  test-integration.js
.eliza/: config.json  registrysettings.json
.elizadb/: postmaster.pid
.elizadb-test/plugin-my-compchem-plugin-v2-1752141662089/: postmaster.pid
.elizadb/global/: 1260  pg_control  pg_internal.init
.elizadb/pg_wal/: 00000001000000000000000A  00000001000000000000000B  00000001000000000000000C  00000001000000000000000D  00000001000000000000001A  00000001000000000000001B
.elizadb/pg_xact/: 0000
characters/: gaussian-scientist.character.json
data/: auto-knowledge-graph.ttl  gaussian-knowledge-graph.ttl
docs/: README.md  api-reference.md  development.md  faq.md  plugin-overview.md  queryGaussianKnowledge-implementation.md  quick-start.md  setup.md  troubleshooting.md  usage-examples.md
eliza/: pnpm-lock.yaml
eliza/.eliza/: config.json
eliza/.elizadb/: postmaster.pid
eliza/agent/: package.json
eliza/scripts/: dev.sh
py/: README.md  __init__.py  generate_comprehensive_report.py  molecular_analyzer.py  parse_gaussian.py  parse_gaussian_cclib.py  plot_gaussian_analysis.py  pyproject.toml  requirements.txt
scripts/: deploy-python.js
src/: index.ts  plugin.ts
src/__tests__/: integration.test.ts  knowledge-graph.test.ts  plugin.test.ts  queryGaussianKnowledge.test.ts  test-utils.ts
src/frontend/: index.tsx
tests/: parse.spec.ts
(+127 files in other folders)
